@@ -1,0 +1,2 @@
+## target with no rule to allow R CMD build to assume that 'clean' is defined.
+clean:
